--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,6 @@ jobs:
         cd infra_project/
         # запустить написанные разработчиком тесты
         python manage.py test
-
 build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
@@ -55,7 +54,6 @@ build_and_push_to_docker_hub:
         with:
           push: true
           tags: patron322/infra_actions:latest
-
 deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -69,7 +67,7 @@ deploy:
         passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
           # Выполняет pull образа с DockerHub
-          sudo docker pull patron322/infra_actions
+          sudo docker pull patron322/infra_action
           #остановка всех контейнеров
           sudo docker stop $(sudo docker ps -a -q)
           sudo docker run --rm -d -p 5000:5000 patron322/infra_actions
