--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         python -m flake8
         # перейти в папку, содержащую manage.py — 
         #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        cd infra_project/
+        cd C:\Dev\infra_actions\infra_project
         # запустить написанные разработчиком тесты
         python manage.py test
 build_and_push_to_docker_hub:
