--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,10 @@ jobs:
         python -m flake8
         # перейти в папку, содержащую manage.py — 
         #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        cd C:\Dev\infra_actions\infra_project
+        cd infra_project/
         # запустить написанные разработчиком тесты
         python manage.py test
+
 build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
@@ -54,6 +55,7 @@ build_and_push_to_docker_hub:
         with:
           push: true
           tags: patron322/infra_actions:latest
+
 deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -64,7 +66,7 @@ deploy:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
+        #passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
           # Выполняет pull образа с DockerHub
           sudo docker pull patron322/infra_action
